# midi-sampler

./: .gitignore  CMakeLists.txt  DELIVERY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  envelope.c  envelope_rt.c  flake.nix  internal.h  internal_rt.h  midi_parser.c  midi_player.c  midi_sampler.pc.in  rt_example.c  sample_loader.c  sampler.c  sampler_rt.c  simple_example  voice.c  voice_rt.c
cmake/: midi_sampler.pc.in  midi_samplerConfig.cmake.in
docs/: ARCHITECTURE.md  RT_GUIDE.md  RT_REVIEW.md
examples/: CMakeLists.txt  rt_example.c  simple_example.c
include/: midi_sampler.h
src/core/: envelope.c  sample_loader.c  sampler.c  voice.c
src/internal/: internal_rt.h
src/midi/: midi_parser.c  midi_player.c
src/realtime/: envelope_rt.c  sampler_rt.c  voice_rt.c
